
Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * do_as_req.c, do_tgs_req.c, kerberos_v4.c, main.c: Remove krb5_enctype
		references, and replace with krb5_keytype where appropriate.

Mon Sep  4 14:10:26 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* do_as_req.c, do_tgs_req.c, kdc_util.c, kdc_util.h, policy.c: Add
		const declarations to variables pointing to error strings
		in order to make everything self consistant.

Fri Sep  1 23:28:29 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kdc_preauth.c: New file, to contain the server-side
		preauthentication routines.

	* do_as_req.c (process_as_req): Move preauthentication code to
		kdc_preauth.c, for better modularity.

	* do_as_req.c (prepare_error_as): Add new argument to this
		function so that the e_data field may be passed in and
		included in the KRB_ERROR messsage which is passed back to
		the user.

Mon Aug 21 17:03:53 EDT 1995	Paul Park	(pjpark@mit.edu)
	* main.c - Interpret -k and -e arguments as strings instead of string
		representations of integers (e.g. -e des-cbc-md5).
	* krb5kdc.M - Remove "ascii representation of a decimal number".


Thu Aug 17 13:49:14 EDT 1995	Paul Park	(pjpark@mit.edu)
	* do_as_req.c - Close and re-open the database after performing a
		database update.  This is the cleanest way to flush out the
		update without reorganizing the code.

Wed Aug 16 02:45:19 1995  Chris Provenzano <proven@mit.edu>

        * do_as_req.c: Pass fds to krb5_lock_file() and krb5_unlock_file()
	* do_as_req.c: Add a missing #ifdef KRBCONF_KDC_MODIFIES_KDB
		for update_client and updating the database.

Tue Aug 15 14:32:54 EDT 1995	Paul Park	(pjpark@mit.edu)
	* extern.h - Add key/salt list to per-realm data.
	* main.c - Save or generate per-realm key/salt list.  Use this list
		to determine which key to use from the list of server keys.
		Fix gcc -Wall complaints.
	* do_as_req.c - Batch KRBCONF_KDC_MODIFIES_KDB updates after the